# cutomer_support_agent_live

./: .gitignore  Dockerfile  app.py  docker-compose.yml  flow.excalidraw  main.py  output.md  pyproject.toml
.github/workflows/: ci.yml  deploy-ec2.yml
customer_support_agent/api/: app_factory.py  dependencies.py
customer_support_agent/api/routers/: __init__.py  drafts.py  knowledge.py  memory.py  tickets.py
customer_support_agent/core/: __init__.py  settings.py
customer_support_agent/integrations/memory/: __init__.py  mem0_store.py
customer_support_agent/integrations/rag/: __init__.py  chroma_kb.py
customer_support_agent/integrations/tools/: __init__.py  support_tools.py
customer_support_agent/repositories/sqlite/: __init__.py  base.py  customers.py  drafts.py  tickets.py
customer_support_agent/schemas/: __init__.py  api.py
customer_support_agent/services/: copilot_service.py  draft_service.py  knowledge_service.py
docs/: EC2_deployment_flow.md
knowledge_base/: banking-atm-cash-withdrawal-faq.md  banking-charges-and-minimum-balance.md  banking-kyc-and-account-update-rules.md  saving-account-rule.md
notebooks/: experiments.ipynb
tests/: test_simple.py
